# Multi-Agent-Medical-RAG

./: README.md  SETUP.md  pyproject.toml  requirements.txt  run_app.bat
src/langgraph/: graph.py
src/langgraph/nodes/: aggregator.py  decider.py  safety_checker.py
src/tools/rag/: retriever.py
src/tools/research/: pubmed_tool.py
web/: clear_db.py
web/static/: index.html  styles.css
